kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chip8
spec:
  type: ClusterIP
  selector:
    app: chip8
  ports:
  - port: 80
    targetPort: 80
